<resources>
    <string name="app_name">Moonheart</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Login</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="send">Send</string>
    <string name="back_to_login">Back to Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="inbox">Inbox</string>
    <string name="settings">Settings</string>
    <string name="users">Users</string>
    <string name="image">Image</string>
    <string name="share">Share</string>
    <string name="support">Support</string>
    <string name="rate_us">Rate Us</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Do you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save_profile">Save Profile</string>
    <string name="age">Age</string>
    <string name="search">Search</string>
    <string name="enter_your_message_here">Enter your message here…</string>
</resources>